--- a/styles/shared/amazon-header.css
+++ b/styles/shared/amazon-header.css
@@ -91,7 +91,7 @@
 }
 
 .amazon-header-right-section {
-  width: 180px;
+  width: 210px;
   flex-shrink: 0;
   display: flex;
   justify-content: end;
@@ -137,7 +137,7 @@
   font-weight: 700;
   position: absolute;
   top: -2px;
-  left: 75px;
+  left: 45px;
   width: 22px;
   height: 22px;
   line-height: 22px;
@@ -176,7 +176,7 @@
   }
 
   .cart-quantity {
-    left: 55px !important;
+    left: 25px !important;
     width: 18px !important;
     height: 18px !important;
     line-height: 18px !important;
